...
    "menu": "Menu",
    "openMenu": "Mở Menu",
    "flipBoard": "Lật Bàn Cờ",
    "copyCode": "Sao Chép Mã Cờ",
    "parseCode": "Phân Tích Mã Cờ",
    "editCode": "Chỉnh Sửa Cờ",
    "newGame": "Ván Mới",
    "loadManual": "Tải Bản Ghi Cờ",
    "saveManual": "Lưu Bản Ghi Cờ",
    "setting": "Cài Đặt",
    "featureNotAvailable": "Tính năng chưa khả dụng",
    "save": "Lưu",
    "cancel": "Hủy",
    "apply": "Áp dụng",
    "close": "Đóng",
    "quit": "Thoát",
...
